--- a/MovieTicketBooking/Views/Admin/DisplayUser.cshtml
+++ b/MovieTicketBooking/Views/Admin/DisplayUser.cshtml
@@ -3,10 +3,10 @@
     ViewBag.Title = "User Details";
     Layout = "~/Views/Shared/_Master.cshtml";
 }
+<h2 class="headingMovie">User Details</h2>
+<div class="adminContent">
 
-<div class="content">
-    <h2 class="heading">User Details</h2>
-    <table cellspacing="0" border="1">
+    <table cellspacing="15">
         <tr>
             <th>First Name </th>
             <th>Last Name </th>
@@ -22,7 +22,7 @@
                 <td>@user.MobileNumber</td>
                 <td>@user.MailId</td>
                 <td>@user.Password</td>
-                <td>
+                <td class="Submit">
                     @Html.ActionLink("Delete", "DeleteUser", new { id = user.UserId },
 
     new { onclick = "return confirm('Are sure wants to delete?');" })
