--- a/MovieTicketBooking/Views/Movie/AddMovie.cshtml
+++ b/MovieTicketBooking/Views/Movie/AddMovie.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Master.cshtml";
 }
 
-<h2 class="content">Add Movie</h2>
+<h2 class="headingMovie">Add Movie</h2>
 <div class="movieAlignment">
     @using (Html.BeginForm("AddMovie", "Movie", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
