--- a/MovieTicketBooking/Views/Movie/ViewMovie.cshtml
+++ b/MovieTicketBooking/Views/Movie/ViewMovie.cshtml
@@ -7,7 +7,7 @@
 <div class="contentMovie">
     <h2>Movies</h2>
 
-    <table border="1" align="center">
+    <table cellpadding="0" border="1" >
         <tr>
             <th>Movie Name</th>
             <th>Movie Type</th>
