--- a/MovieTicketBooking/Views/Shared/_Master.cshtml
+++ b/MovieTicketBooking/Views/Shared/_Master.cshtml
@@ -3,7 +3,7 @@
     Layout = null;
 }
 <head>
-    <link rel="stylesheet" href="~/styles/StyleSheet.css" />
+    <link rel="stylesheet" href="~/Styles/StyleSheet.css" />
 </head>
 <body>
     <header>
@@ -25,7 +25,7 @@
                     <li class="li">@Html.ActionLink("Login", "SignIn", "Account")</li>
                 }
 
-                <li class="li">@Html.ActionLink("Sign Up", "SignUp", "Account")</li>
+                <li class="li">@Html.ActionLink("SignUp", "SignUp", "Account")</li>
                 @if (HttpContext.Current.User.IsInRole("Admin"))
                 {
 
@@ -47,13 +47,14 @@
                 @Html.ActionLink("Contact Us", "", "")
             </p>
         </div>
+        <div class="backgroundImage">
+            <img src="~/Image/bg2.jpg" alt="Icon" width="100%" height="800px" />
+        </div>
     </header>
-    <div>
+    <div class="bodyContent">
         @RenderBody()
     </div>
-    <footer>
-        ©
-    </footer>
+    
 
 </body>
 
