--- a/MovieTicketBooking/Views/Theatre/ViewTheatre.cshtml
+++ b/MovieTicketBooking/Views/Theatre/ViewTheatre.cshtml
@@ -4,8 +4,9 @@
     ViewBag.Title = "ViewTheatre";
     Layout = "~/Views/Shared/_Master.cshtml";
 }
-<div class="content">
-    <h2>Welcome to Online Movie Ticket Booking</h2>
+<h2 class="headingMovie">Theatre Details</h2>
+<div class="adminContent">
+
     <table cellspacing="0" border="1">
         <tr>
             <th>Theatre Name </th>
