--- a/MovieTicketBooking/Views/User/DisplayMovie.cshtml
+++ b/MovieTicketBooking/Views/User/DisplayMovie.cshtml
@@ -5,39 +5,99 @@
     Layout = "~/Views/Shared/_Master.cshtml";
 }
 
-<h2 class="content">Online Movie Ticket Booking</h2>
-<div class="mainDiv">
-    @foreach (var item in Model.Movies)
-    {
-        <div class="LeftDiv">
-            <div class="movie">
-                <p>
-                    <b>@item.MovieName</b> <br />
-                    @foreach (var theatre in Model.Theatres)
-                    {
-                        if (theatre != null && item.TheatreId == theatre.TheatreId)
+<h2 class="headingMovie">Movie Ticket Booking</h2>
+<div class="movieDiv">
+    <div class="movieLeft">
+        <div class="labelFilter"><b>FILTER BY</b></div>
+        <div class="filter">
+            <label><b>LANGUAGE</b></label>
+            <ul>
+                <li>
+                    <b>Tamil</b>
+                </li>
+                <li>
+                    <b>English</b>
+                </li>
+            </ul>
+        </div>
+        <div class="filter">
+            <label><b>EXPERIENCE</b></label>
+            <ul><li><b>2D</b></li></ul>
+        </div>
+        <div class="filter">
+            <label><b>GENRE</b></label>
+            <ul>
+                <li><b>Drama</b></li>
+                <li><b>Romance</b></li>
+                <li><b>Action</b></li>
+                <li><b>Comedy</b></li>
+                <li><b>History</b></li>
+            </ul>
+        </div>
+    </div>
+    <div class="userMovie">
+        @foreach (var item in Model.Movies)
+        {
+            <table cellpadding="15" style="border:inset">
+                <tr>
+                    <td>
+                        <a href='@Url.Action("DisplayMovie", "User", new { id = item.MovieId })'>
+                            <img width="180" height="120" src="@Url.Content(item.ImagePath)" />
+                    </td>
+                    <td>
+                        <b>@item.MovieName</b> <br />
+                        @foreach (var theatre in Model.Theatres)
                         {
-                            <b>@theatre.TheatreName</b> <br />
-                            break;
+                            if (theatre != null && item.TheatreId == theatre.TheatreId)
+                            {
+                                <b>@theatre.TheatreName</b> <br />
+                                break;
+                            }
                         }
-                    }
-                    <span class="city">@item.MovieDescription</span>
-                </p>
-            </div>
-            <div class="img">
-                <a href='@Url.Action("DisplayMovie","User",new { id = item.MovieId })'>
-                    <img width="180" height="120" src="@Url.Content(item.ImagePath)" />
-                </a>
-            </div>
-        </div>
-        <div class="RightDiv">
-            <p>
-                @Html.ActionLink("10.30", "BookTicket", "User", new { show = 1, movieId = @item.MovieId }, null) &nbsp;&nbsp;
-                @Html.ActionLink("2.30", "BookTicket", "User", new { show = 2, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-                @Html.ActionLink("6.30", "BookTicket", "User", new { show = 3, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-                @Html.ActionLink("9.30", "BookTicket", "User", new { show = 4, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-            </p><br /><br /><br /><br /><br /><br />
-        </div>
-    }
+                        <span class="city">@item.MovieDescription</span>
+                    </td>
+                    <td>
+                        <p class="Submit">
+                            @Html.ActionLink("10.30 AM", "BookTicket", "User", new { show = 1, movieId = @item.MovieId }, null) &nbsp;&nbsp;
+                            @Html.ActionLink("2.30 PM", "BookTicket", "User", new { show = 2, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                            @Html.ActionLink("6.30 PM", "BookTicket", "User", new { show = 3, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                            @Html.ActionLink("9.30 PM", "BookTicket", "User", new { show = 4, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        }
+    </div>
 </div>
+@*          <div class="LeftDiv">
+                    <div class="movie">
+                        <p>
+                            <b>@item.MovieName</b> <br />
+                            @foreach (var theatre in Model.Theatres)
+                            {
+                                if (theatre != null && item.TheatreId == theatre.TheatreId)
+                                {
+                                    <b>@theatre.TheatreName</b> <br />
+                                    break;
+                                }
+                            }
+                            <span class="city">@item.MovieDescription</span>
+                        </p>
+                    </div>
+                    <div class="img">
+                        <a href='@Url.Action("DisplayMovie","User",new { id = item.MovieId })'>
+                            <img width="180" height="120" src="@Url.Content(item.ImagePath)" />
+                        </a>
+                    </div>
+                </div>
+                <div class="RightDiv">
+                    <p>
+                        @Html.ActionLink("10.30", "BookTicket", "User", new { show = 1, movieId = @item.MovieId }, null) &nbsp;&nbsp;
+                        @Html.ActionLink("2.30", "BookTicket", "User", new { show = 2, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                        @Html.ActionLink("6.30", "BookTicket", "User", new { show = 3, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                        @Html.ActionLink("9.30", "BookTicket", "User", new { show = 4, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                    </p><br /><br /><br /><br /><br /><br />
+            </div>
+        }
+    </div>*@
 
