--- a/MovieTicketBooking/Views/User/ViewMovie.cshtml
+++ b/MovieTicketBooking/Views/User/ViewMovie.cshtml
@@ -1,26 +1,33 @@
-﻿@model  IEnumerable<MovieTicketBooking.Entity.Movie>
+﻿@model  IEnumerable<MovieTicketBooking.Models.MovieModel>
 
 @{
     ViewBag.Title = "ViewMovie";
     Layout = "~/Views/Shared/_Master.cshtml";
 }
-<h2 class="content">Online Movie Ticket Booking</h2>
-<div class="mainDiv">
-    @foreach (MovieTicketBooking.Entity.Movie item in Model)
+<h2 class="headingMovie">Online Movie Ticket Booking</h2>
+
+<div class="userMovie">
+    @foreach (MovieTicketBooking.Models.MovieModel item in Model)
     {
-        <div class="LeftDiv">
-            <p>
-                <b>@item.MovieName</b>  <br />
-                <span class="city">@item.MovieDescription</span>
-            </p>
-        </div>
-        <div class="RightDiv">
-            <p>
-                @Html.ActionLink("10.30", "BookTicket", "User", new { show = 1, movieId = @item.MovieId }, null) &nbsp;&nbsp;
-                @Html.ActionLink("2.30", "BookTicket", "User", new { show = 2, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-                @Html.ActionLink("6.30", "BookTicket", "User", new { show = 3, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-                @Html.ActionLink("9.30", "BookTicket", "User", new { show = 4, movieId = @item.MovieId }, null)&nbsp;&nbsp;
-            </p><br />
-        </div>
-    }
-</div>
+        <table cellpadding="15" style="border:inset">
+            <tr>
+                <td>
+                    <a href='@Url.Action("DisplayMovie","User",new { id = item.MovieId })'>
+                        <img width="180" height="120" src="@Url.Content(item.ImagePath)" />
+                </td>
+                <td>
+                    <b>@item.MovieName</b>  <br />
+                    <span class="city">@item.MovieDescription</span>
+                </td>
+                <td>
+                    <p>
+                        @Html.ActionLink("10.30", "BookTicket", "User", new { show = 1, movieId = @item.MovieId }, null) &nbsp;&nbsp;
+                        @Html.ActionLink("2.30", "BookTicket", "User", new { show = 2, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                        @Html.ActionLink("6.30", "BookTicket", "User", new { show = 3, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                        @Html.ActionLink("9.30", "BookTicket", "User", new { show = 4, movieId = @item.MovieId }, null)&nbsp;&nbsp;
+                    </p>
+                </td>
+               </tr>
+            </table>
+                }
+    </div>
